--- a/reportng/src/main/resources/org/uncommons/reportng/templates/html/results.html.vm
+++ b/reportng/src/main/resources/org/uncommons/reportng/templates/html/results.html.vm
@@ -49,10 +49,18 @@
 
 #if ($failedTests.size() > 0)
   <table class="resultsTable">
-    <tr><th colspan="3" class="header failed">$messages.getString("failedTests")</th></tr>
+    <tr><th colspan="6" class="header failed">$messages.getString("failedTests")</th></tr>
     #foreach ($testClass in $failedTests.keySet())
       <tr>
-        <td colspan="3" class="group">$testClass.name</td>
+      ##        remark by Bem
+      ##        <td colspan="3" class="group">$testClass.name</td>
+        ## added by Bem
+        <td  class="group">$testClass.name</td>
+        <td  class="group">$messages.getString("duration")</td>
+        <td  class="group">$messages.getString("description")</td>
+        <td  class="group">$messages.getString("result")</td>
+        <td  class="group">$messages.getString("log")</td>
+        <td  class="group">$messages.getString("screenshot")</td>
       </tr>
       #set ($classResults = $failedTests.get($testClass))
       #parse ("org/uncommons/reportng/templates/html/class-results.html.vm")
@@ -62,10 +70,18 @@
 
 #if ($skippedTests.size() > 0)
   <table class="resultsTable" width="100%">
-    <tr><th colspan="3" class="header skipped">$messages.getString("skippedTests")</th></tr>
+    <tr><th colspan="6" class="header skipped">$messages.getString("skippedTests")</th></tr>
     #foreach ($testClass in $skippedTests.keySet())
       <tr>
-        <td colspan="3" class="group">$testClass.name</td>
+        ##        remark by Bem
+        ##        <td colspan="3" class="group">$testClass.name</td>
+        ## added by Bem
+        <td  class="group">$testClass.name</td>
+        <td  class="group">$messages.getString("duration")</td>
+        <td  class="group">$messages.getString("description")</td>
+        <td  class="group">$messages.getString("result")</td>
+        <td  class="group">$messages.getString("log")</td>
+        <td  class="group">$messages.getString("screenshot")</td>
       </tr>
       #set ($classResults = $skippedTests.get($testClass))
       #parse ("org/uncommons/reportng/templates/html/class-results.html.vm")
@@ -75,10 +91,18 @@
 
 #if ($passedTests.size() > 0)
   <table class="resultsTable">
-    <tr><th colspan="3" class="header passed">$messages.getString("passedTests")</th></tr>
+    <tr><th colspan="6" class="header passed">$messages.getString("passedTests")</th></tr>
     #foreach ($testClass in $passedTests.keySet())
       <tr>
-        <td colspan="3" class="group">$testClass.name</td>
+        ##  remark by Bem
+        ##  <td colspan="3" class="group">$testClass.name</td>
+        ##  added by Bem
+        <td  class="group">$testClass.name</td>
+        <td  class="group">$messages.getString("duration")</td>
+        <td  class="group">$messages.getString("description")</td>
+        <td  class="group">$messages.getString("result")</td>
+        <td  class="group">$messages.getString("log")</td>
+        <td  class="group">$messages.getString("screenshot")</td>
       </tr>
       #set ($classResults = $passedTests.get($testClass))
       #parse ("org/uncommons/reportng/templates/html/class-results.html.vm")
