--- a/reportng/src/main/resources/org/uncommons/reportng/templates/html/reportng.css
+++ b/reportng/src/main/resources/org/uncommons/reportng/templates/html/reportng.css
@@ -20,6 +20,9 @@ td                       {font-size: 1.3em;}
 .test .passed            {background-color: #88ee88;}
 .test .skipped           {background-color: #ffff77;}
 .test .failed            {background-color: #ff8888;}
+.test .method .passed    {font-size: 1.1em; vertical-align: middle; font-color:#88ee88}
+.test .method .skipped   {font-size: 1.1em; vertical-align: middle; font-color:#ffff77}
+.test .method .failed    {font-size: 1.1em; vertical-align: middle; font-color:#ff8888}
 .group                   {background-color: #cccccc; color: #000000; font-weight: bold;}
 .suiteLinks              {float: right; font-weight: normal; vertical-align: middle;}
 .suiteLinks a            {color: #ffffff; margin-left: .5em;}
