--- a/reportng/src/main/resources/org/uncommons/reportng/templates/html/reportng.css
+++ b/reportng/src/main/resources/org/uncommons/reportng/templates/html/reportng.css
@@ -59,6 +59,7 @@ div.test                 {margin-top: 0.1em; clear: right; font-size: 1.3em;}
 .result                  {font-size: 1.1em; vertical-align: middle;}
 .dependency              {font-family: Lucida Console, Monaco, Courier New, monospace; font-weight: bold;}
 .arguments               {font-family: Lucida Console, Monaco, Courier New, monospace; font-weight: bold;}
+.description             {font-family: Lucida Console, Monaco, Courier New, monospace; font-weight: bold;}
 .testOutput              {font-family: Lucida Console, Monaco, Courier New, monospace; color: #666666;}
 .stackTrace              {font-size: 0.9em; line-height: 1.2em; margin-left: 2em; display: none;}
 .stackTrace .stackTrace  {font-size: inherit;}
